fix spacing

--- a/style.css
+++ b/style.css
@@ -70,7 +70,6 @@ body {
 }
 
 .team h2{
-    margin-top: 37rem;
     font-size: 40px;
 }
 
